--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,12 @@
 buildscript {
     repositories {
-        mavenCentral()
+        google()
+        jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.7.+'
+        classpath 'com.android.tools.build:gradle:3.1.3'
     }
-}
-
-def isReleaseBuild() {
-    return version.contains("SNAPSHOT") == false
 }
 
 allprojects {
@@ -17,14 +14,19 @@ allprojects {
     group = GROUP
 
     repositories {
-        mavenCentral()
+        google()
+        jcenter()
     }
 }
 
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 android {
-	compileSdkVersion 16
-	buildToolsVersion "18.1.1"
+    compileSdkVersion 26
+
+    defaultConfig {
+        minSdkVersion 14
+        targetSdkVersion 26
+    }
 
     sourceSets {
         main {
@@ -36,4 +38,3 @@ android {
 }
 
 
-apply from: 'maven_push.gradle'
